# py-rules-engine

./: .coverage  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rules_engine/: __init__.py  core.py  manual_test.py  resolvers.py
src/rules_engine/core/: base.py  combinators.py
src/rules_engine/field/: field.py
src/rules_engine/predicates/: __init__.py  base.py  collection.py  comparisons.py  logical.py  string.py
src/rules_engine/rules/: collection.py  comparison.py  contains.py  length.py  strings.py
src/rules_engine/utils/: nested.py
tests/: conftest.py  test_collection.py  test_combinators.py  test_comparison.py  test_contains.py  test_exceptions.py  test_integration.py  test_length.py  test_nested.py  test_predicate_logical.py  test_predicates_all.py  test_serialization.py  test_string.py
tests/core/: test_base_core.py  test_combinators_core.py
tests/predicates/: test_base_predicate.py  test_collection_predicate.py  test_comparison_predicate.py  test_logical_predicates.py  test_string_predicates.py
tests/rules/: conftest.py  test_collection.py  test_comparison.py  test_contains.py  test_length.py  test_string.py
tests/utils/: test_nested.py
