[project]
name = "py-rules-engine"
version = "0.1.0"
description = "Composable, Pythonic business rules and validation engine with expression trees"
readme = "README.md"
authors = [
    { name = "Elias", email = "ellamebrahtom1995@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["license-file"]
dependencies = []


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rules_engine"]

[tool.hatch.build.include]
files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0"
]


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, flakes, imports
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


